8221355: Performance regression after JDK-8155635 backport into 8u

Reviewed-by: shade, roland